asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotifierSetting__mdt/AsynchronousProcessNotifierSetting__mdt.object-meta.xml
<CustomObject>
    <description>Quickly configure the behavior of an Asynchronous Process Notification platform event.</description>
    <label>Asynchronous Process Notifier Setting</label>
    <pluralLabel>Asynchronous Process Notifier Settings</pluralLabel>
</CustomObject>