asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotifierSetting__mdt/fields/RefreshObjectsListViews__c.field-meta.xml
<CustomField>
    <fullName>RefreshObjectsListViews__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refresh the concerned object&#39;s list views to see data rolback when a user navigates on one of the object&#39;s list views.</description>
    <inlineHelpText>Refresh the concerned object&#39;s list views to see data rolback when a user navigates on one of the object&#39;s list views.</inlineHelpText>
    <label>Refresh Object&#39;s List Views</label>
    <type>Checkbox</type>
</CustomField>