asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotifierSetting__mdt/fields/RefreshRecordsViewPage__c.field-meta.xml
<CustomField>
    <fullName>RefreshRecordsViewPage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refresh the concerned record&#39;s view page to see data rolback.</description>
    <inlineHelpText>Refresh the concerned record&#39;s view page to see data rolback.</inlineHelpText>
    <label>Refresh Record&#39;s View Page</label>
    <type>Checkbox</type>
</CustomField>