asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotifierSetting__mdt/fields/ToastNotificationMode__c.field-meta.xml
<CustomField>
    <fullName>ToastNotificationMode__c</fullName>
    <description>Set the toast notification persistency. Valid values are: dismissable (default), pester or sticky.</description>
    <inlineHelpText>Set the toast notification persistency. Valid values are: dismissable (default), pester or sticky.</inlineHelpText>
    <label>Toast Notification Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dismissable</fullName>
                <default>true</default>
                <label>Dismissable</label>
            </value>
            <value>
                <fullName>pester</fullName>
                <label>Pester</label>
            </value>
            <value>
                <fullName>sticky</fullName>
                <label>Sticky</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>