asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotifierSetting__mdt/fields/ToastNotificationVariant__c.field-meta.xml
<CustomField>
    <fullName>ToastNotificationVariant__c</fullName>
    <description>Set toast notification variant: Valid values are: info (default), success, warning, and error.</description>
    <inlineHelpText>Set toast notification variant: Valid values are: info (default), success, warning, and error.</inlineHelpText>
    <label>Toast Notification Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>info</fullName>
                <default>true</default>
                <label>Info</label>
            </value>
            <value>
                <fullName>success</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>warning</fullName>
                <label>Warning</label>
            </value>
            <value>
                <fullName>error</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>