asynchronous-process-notifier/main/default/objects/AsynchronousProcessNotifierSetting__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DisplayNotification__c</columns>
    <columns>RefreshRecordsViewPage__c</columns>
    <columns>RefreshObjectsListViews__c</columns>
    <columns>ToastNotificationMode__c</columns>
    <columns>ToastNotificationVariant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>